# STM32_FromScratch

./: README.md
.metadata/: .log4j.xml  .log4j2.xml  version.ini
ABRIL-2023/.metadata/: .log4j2.xml  version.ini
ABRIL-2023/DWIN-GUI/: DWprj.hmi
ABRIL-2023/ESP8266_AT/: .cproject  .mxproject  .project  ESP8266_AT Debug.launch  ESP8266_AT.ioc
ABRIL-2023/GPIO/: GPIO Debug.launch
ABRIL-2023/GPIO2/: .project  GPIO2 Debug.launch
ABRIL-2023/HAL_Driver_TIMER_IC/: .cproject  .mxproject  .project  HAL_Driver_TIMER_IC Debug.launch  HAL_Driver_TIMER_IC.ioc
ABRIL-2023/HAL_Driver_UART/: .cproject  .mxproject  .project  HAL_Driver_UART Debug.launch  HAL_Driver_UART.ioc
ABRIL-2023/HAL_Drivers/: .cproject  .mxproject  HAL_Drivers.ioc
ABRIL-2023/HAL_Drivers_ADC/: .cproject  .mxproject  .project  HAL_Drivers_ADC.ioc
ABRIL-2023/HAL_Drivers_DMA/: .cproject  .mxproject  .project  HAL_Drivers_DMA Debug.launch  HAL_Drivers_DMA.ioc
ABRIL-2023/HAL_Drivers_EXTI/: .cproject  .project  HAL_Drivers_EXTI Debug.launch  HAL_Drivers_EXTI.ioc
ABRIL-2023/LL_ADC/: .cproject  .mxproject  .project  LL_ADC Debug.launch  LL_ADC.ioc
ABRIL-2023/LL_I2C/: .cproject  .mxproject  .project  LL_I2C Debug.launch  LL_I2C.ioc
ABRIL-2023/LL_SPI/: .cproject  .mxproject  .project  LL_SPI Debug.launch  LL_SPI.ioc
ABRIL-2023/LL_TIMER/: .cproject  .mxproject  .project  LL_TIMER Debug.launch  LL_TIMER.ioc
ABRIL-2023/LL_UART/: .cproject  .mxproject  .project  LL_UART Debug.launch  LL_UART.ioc
ABRIL-2023/MODBUS MASTER/: .project  MODBUS Debug.launch  MODBUS MASTER.launch
ABRIL-2023/MODBUS SLAVE/: .cproject  .project  BUTTON.launch  RING BUFFER Debug.launch  RING BUFFER.ioc
ABRIL-2023/RTOS/: .cproject  .mxproject  RTOS Debug.launch  RTOS.ioc
ABRIL-2023/STM32_STM32L412KB/: .cproject  .project  STM32L412KBUX_FLASH.ld  STM32_STM32L412KB.launch
ABRIL-2023/SysTick_IT/: SysTick_IT Debug.launch  Template Debug.launch
ABRIL-2023/Template/: .cproject
ABRIL-2023/W5100/: .cproject  W5100 Debug.launch
ADC/: SYSTICK_IT.launch
ADC/Debug/: ADC.map
CLASE0/: CLASE0.ioc  Makefile
DMA/: .cproject  ADC Debug.launch
DMA/Debug/: DMA.elf
ENERO-2024/.metadata/: .log4j2.xml  version.ini
ENERO-2024/GPIO/: GPIO Debug.launch
ENERO-2024/HAL_Drivers/: .cproject  .mxproject  HAL_Drivers.ioc  STM32C031C6TX_FLASH.ld
ENERO-2024/Template/: .cproject
GPIO/Debug/: GPIO.elf  GPIO.list  GPIO.map  GPIO_BIT_BANDING.list  GPIO_BIT_BANDING.map  makefile
GPIO_DEFINES/Debug/: GPIO_DEFINES.elf  GPIO_DEFINES.map  makefile
I2C/Debug/: I2C.list  makefile  objects.list
JUNIO-2023/GPIO/: GPIO.launch
MPU6050/: MPU6050.ioc  MPU6050.launch
MPU650_LibDriver/: .cproject  MPU650_LibDriver Debug.launch
NOVIEMBRE - 2023/: readme.md
NOVIEMBRE - 2023/SysTick/: .project  CMakeLists.txt  SysTick.launch
NOVIEMBRE - 2023/SysTick/Debug/: SysTick.elf  SysTick.list  SysTick.map  makefile
NOVIEMBRE - 2023/SysTick/Debug/Src/: main.cyclo  main.d  main.su  subdir.mk  system_stm32f4xx.d
NOVIEMBRE - 2023/SysTick/Src/: main.c
SPI/: OLED.pdsprj.DESKTOP-0TNQMAR.jeffr.workspace
SYSTICK_IT/: .project
USART_IT/: USART Debug.launch  USART_IT Debug.launch
USART_RING_BUFFER/: .project
(+3971 files in other folders)
